crown-language/src/grammars/dsl.g4
grammar DSL;
fragment LETTER: [a-zA-Z];
fragment DIGIT: [0-9];


program: (NEW_LINE | ( (fact | aliasDeclaration) NEW_LINE? ) )* NEW_LINE* EOF;

fact: sentence TERMINATOR;

aliasDeclaration: ALIAS_KW PLAIN_WORD (EQUALS PREDICATE)? TERMINATOR;

sentence: token+ ;

//the standalone hash and exclamation are allowed for better autocomplete(for aliases and name assertions)
//the apostrophe is a helper when constructing sentences to show possession like mark's
token: (primitive | list | ref | PREDICATE | ALIAS | PLAIN_WORD ) |
    (COMMA | LPAREN | RPAREN | SEMICOLON | QUESTION | EXCLAMATION | APOSTROPHE | HASH);

list: LSQUARE ((primitive | ref | list) (COMMA (primitive | ref | list))*)? RSQUARE;

COMMA: ',';
LPAREN: '(';
RPAREN: ')';
LSQUARE: '[';
RSQUARE: ']';
SEMICOLON: ';';
QUESTION: '?';
EXCLAMATION: '!';
HASH:'#';
APOSTROPHE:'\'';

EQUALS: '=';
ALIAS_KW:'alias';//

TERMINATOR:'.' | '&and';
fragment COLON:':';

PREDICATE: '*' PLAIN_WORD;
ALIAS: HASH PLAIN_WORD;

NAME: (COLON PLAIN_WORD) | (EXCLAMATION PLAIN_WORD);//
NUMBER: '-'? DIGIT+ ('.' DIGIT+)?;//
PLAIN_WORD: LETTER (LETTER | DIGIT | '_')*;

primitive:NAME | NUMBER;
ref: GENERIC_REF | SINGLE_SUBJECT_REF | GROUP_SUBJECT_REF | SINGLE_OBJECT_REF | GROUP_OBJECT_REF;
GENERIC_REF:'<' 'ref' COLON NUMBER '>';

SINGLE_SUBJECT_REF:'<' SINGLE_NOUN_REF '>';
GROUP_SUBJECT_REF:'<' GROUP_NOUN_REF '>';

SINGLE_OBJECT_REF:'<' SINGLE_NOUN_OBJECT_REF COLON NUMBER '>';
GROUP_OBJECT_REF:'<' GROUP_NOUN_OBJECT_REF COLON NUMBER '>';

fragment SINGLE_NOUN_OBJECT_REF:'him' | 'her' | 'it' | 'his';
fragment GROUP_NOUN_OBJECT_REF:'them' | 'their';

fragment SINGLE_NOUN_REF:'He' | 'She' | 'It' | 'His' | 'Her' | 'Their';
fragment GROUP_NOUN_REF:'They';

NEW_LINE:('\r\n' | '\r' | '\n');
WS:[ \t]+ -> skip ;
COMMENT: '//' ~[\r\n]* -> skip;
