crown-language/src/generated/DSLParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { DSLListener } from "./DSLListener.js";
import { DSLVisitor } from "./DSLVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class DSLParser extends antlr.Parser {
    public static readonly COMMA = 1;
    public static readonly LPAREN = 2;
    public static readonly RPAREN = 3;
    public static readonly LSQUARE = 4;
    public static readonly RSQUARE = 5;
    public static readonly SEMICOLON = 6;
    public static readonly QUESTION = 7;
    public static readonly EXCLAMATION = 8;
    public static readonly HASH = 9;
    public static readonly APOSTROPHE = 10;
    public static readonly EQUALS = 11;
    public static readonly ALIAS_KW = 12;
    public static readonly TERMINATOR = 13;
    public static readonly PREDICATE = 14;
    public static readonly ALIAS = 15;
    public static readonly NAME = 16;
    public static readonly NUMBER = 17;
    public static readonly PLAIN_WORD = 18;
    public static readonly GENERIC_REF = 19;
    public static readonly SINGLE_SUBJECT_REF = 20;
    public static readonly GROUP_SUBJECT_REF = 21;
    public static readonly SINGLE_OBJECT_REF = 22;
    public static readonly GROUP_OBJECT_REF = 23;
    public static readonly NEW_LINE = 24;
    public static readonly WS = 25;
    public static readonly COMMENT = 26;
    public static readonly RULE_program = 0;
    public static readonly RULE_fact = 1;
    public static readonly RULE_aliasDeclaration = 2;
    public static readonly RULE_sentence = 3;
    public static readonly RULE_token = 4;
    public static readonly RULE_list = 5;
    public static readonly RULE_primitive = 6;
    public static readonly RULE_ref = 7;

    public static readonly literalNames = [
        null, "','", "'('", "')'", "'['", "']'", "';'", "'?'", "'!'", "'#'", 
        "'''", "'='", "'alias'"
    ];

    public static readonly symbolicNames = [
        null, "COMMA", "LPAREN", "RPAREN", "LSQUARE", "RSQUARE", "SEMICOLON", 
        "QUESTION", "EXCLAMATION", "HASH", "APOSTROPHE", "EQUALS", "ALIAS_KW", 
        "TERMINATOR", "PREDICATE", "ALIAS", "NAME", "NUMBER", "PLAIN_WORD", 
        "GENERIC_REF", "SINGLE_SUBJECT_REF", "GROUP_SUBJECT_REF", "SINGLE_OBJECT_REF", 
        "GROUP_OBJECT_REF", "NEW_LINE", "WS", "COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "fact", "aliasDeclaration", "sentence", "token", "list", 
        "primitive", "ref",
    ];

    public get grammarFileName(): string { return "DSL.g4"; }
    public get literalNames(): (string | null)[] { return DSLParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return DSLParser.symbolicNames; }
    public get ruleNames(): string[] { return DSLParser.ruleNames; }
    public get serializedATN(): number[] { return DSLParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, DSLParser._ATN, DSLParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, DSLParser.RULE_program);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 26;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    this.state = 24;
                    this.errorHandler.sync(this);
                    switch (this.tokenStream.LA(1)) {
                    case DSLParser.NEW_LINE:
                        {
                        this.state = 16;
                        this.match(DSLParser.NEW_LINE);
                        }
                        break;
                    case DSLParser.COMMA:
                    case DSLParser.LPAREN:
                    case DSLParser.RPAREN:
                    case DSLParser.LSQUARE:
                    case DSLParser.SEMICOLON:
                    case DSLParser.QUESTION:
                    case DSLParser.EXCLAMATION:
                    case DSLParser.HASH:
                    case DSLParser.APOSTROPHE:
                    case DSLParser.ALIAS_KW:
                    case DSLParser.PREDICATE:
                    case DSLParser.ALIAS:
                    case DSLParser.NAME:
                    case DSLParser.NUMBER:
                    case DSLParser.PLAIN_WORD:
                    case DSLParser.GENERIC_REF:
                    case DSLParser.SINGLE_SUBJECT_REF:
                    case DSLParser.GROUP_SUBJECT_REF:
                    case DSLParser.SINGLE_OBJECT_REF:
                    case DSLParser.GROUP_OBJECT_REF:
                        {
                        {
                        this.state = 19;
                        this.errorHandler.sync(this);
                        switch (this.tokenStream.LA(1)) {
                        case DSLParser.COMMA:
                        case DSLParser.LPAREN:
                        case DSLParser.RPAREN:
                        case DSLParser.LSQUARE:
                        case DSLParser.SEMICOLON:
                        case DSLParser.QUESTION:
                        case DSLParser.EXCLAMATION:
                        case DSLParser.HASH:
                        case DSLParser.APOSTROPHE:
                        case DSLParser.PREDICATE:
                        case DSLParser.ALIAS:
                        case DSLParser.NAME:
                        case DSLParser.NUMBER:
                        case DSLParser.PLAIN_WORD:
                        case DSLParser.GENERIC_REF:
                        case DSLParser.SINGLE_SUBJECT_REF:
                        case DSLParser.GROUP_SUBJECT_REF:
                        case DSLParser.SINGLE_OBJECT_REF:
                        case DSLParser.GROUP_OBJECT_REF:
                            {
                            this.state = 17;
                            this.fact();
                            }
                            break;
                        case DSLParser.ALIAS_KW:
                            {
                            this.state = 18;
                            this.aliasDeclaration();
                            }
                            break;
                        default:
                            throw new antlr.NoViableAltException(this);
                        }
                        this.state = 22;
                        this.errorHandler.sync(this);
                        switch (this.interpreter.adaptivePredict(this.tokenStream, 1, this.context) ) {
                        case 1:
                            {
                            this.state = 21;
                            this.match(DSLParser.NEW_LINE);
                            }
                            break;
                        }
                        }
                        }
                        break;
                    default:
                        throw new antlr.NoViableAltException(this);
                    }
                    }
                }
                this.state = 28;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            }
            this.state = 32;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 24) {
                {
                {
                this.state = 29;
                this.match(DSLParser.NEW_LINE);
                }
                }
                this.state = 34;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 35;
            this.match(DSLParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public fact(): FactContext {
        let localContext = new FactContext(this.context, this.state);
        this.enterRule(localContext, 2, DSLParser.RULE_fact);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 37;
            this.sentence();
            this.state = 38;
            this.match(DSLParser.TERMINATOR);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public aliasDeclaration(): AliasDeclarationContext {
        let localContext = new AliasDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 4, DSLParser.RULE_aliasDeclaration);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 40;
            this.match(DSLParser.ALIAS_KW);
            this.state = 41;
            this.match(DSLParser.PLAIN_WORD);
            this.state = 44;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11) {
                {
                this.state = 42;
                this.match(DSLParser.EQUALS);
                this.state = 43;
                this.match(DSLParser.PREDICATE);
                }
            }

            this.state = 46;
            this.match(DSLParser.TERMINATOR);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sentence(): SentenceContext {
        let localContext = new SentenceContext(this.context, this.state);
        this.enterRule(localContext, 6, DSLParser.RULE_sentence);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 49;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 48;
                this.token();
                }
                }
                this.state = 51;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 16762846) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public token(): TokenContext {
        let localContext = new TokenContext(this.context, this.state);
        this.enterRule(localContext, 8, DSLParser.RULE_token);
        let _la: number;
        try {
            this.state = 62;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case DSLParser.LSQUARE:
            case DSLParser.PREDICATE:
            case DSLParser.ALIAS:
            case DSLParser.NAME:
            case DSLParser.NUMBER:
            case DSLParser.PLAIN_WORD:
            case DSLParser.GENERIC_REF:
            case DSLParser.SINGLE_SUBJECT_REF:
            case DSLParser.GROUP_SUBJECT_REF:
            case DSLParser.SINGLE_OBJECT_REF:
            case DSLParser.GROUP_OBJECT_REF:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 59;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case DSLParser.NAME:
                case DSLParser.NUMBER:
                    {
                    this.state = 53;
                    this.primitive();
                    }
                    break;
                case DSLParser.LSQUARE:
                    {
                    this.state = 54;
                    this.list();
                    }
                    break;
                case DSLParser.GENERIC_REF:
                case DSLParser.SINGLE_SUBJECT_REF:
                case DSLParser.GROUP_SUBJECT_REF:
                case DSLParser.SINGLE_OBJECT_REF:
                case DSLParser.GROUP_OBJECT_REF:
                    {
                    this.state = 55;
                    this.ref();
                    }
                    break;
                case DSLParser.PREDICATE:
                    {
                    this.state = 56;
                    this.match(DSLParser.PREDICATE);
                    }
                    break;
                case DSLParser.ALIAS:
                    {
                    this.state = 57;
                    this.match(DSLParser.ALIAS);
                    }
                    break;
                case DSLParser.PLAIN_WORD:
                    {
                    this.state = 58;
                    this.match(DSLParser.PLAIN_WORD);
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                break;
            case DSLParser.COMMA:
            case DSLParser.LPAREN:
            case DSLParser.RPAREN:
            case DSLParser.SEMICOLON:
            case DSLParser.QUESTION:
            case DSLParser.EXCLAMATION:
            case DSLParser.HASH:
            case DSLParser.APOSTROPHE:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 61;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1998) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public list(): ListContext {
        let localContext = new ListContext(this.context, this.state);
        this.enterRule(localContext, 10, DSLParser.RULE_list);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 64;
            this.match(DSLParser.LSQUARE);
            this.state = 81;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 16449552) !== 0)) {
                {
                this.state = 68;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case DSLParser.NAME:
                case DSLParser.NUMBER:
                    {
                    this.state = 65;
                    this.primitive();
                    }
                    break;
                case DSLParser.GENERIC_REF:
                case DSLParser.SINGLE_SUBJECT_REF:
                case DSLParser.GROUP_SUBJECT_REF:
                case DSLParser.SINGLE_OBJECT_REF:
                case DSLParser.GROUP_OBJECT_REF:
                    {
                    this.state = 66;
                    this.ref();
                    }
                    break;
                case DSLParser.LSQUARE:
                    {
                    this.state = 67;
                    this.list();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 78;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 1) {
                    {
                    {
                    this.state = 70;
                    this.match(DSLParser.COMMA);
                    this.state = 74;
                    this.errorHandler.sync(this);
                    switch (this.tokenStream.LA(1)) {
                    case DSLParser.NAME:
                    case DSLParser.NUMBER:
                        {
                        this.state = 71;
                        this.primitive();
                        }
                        break;
                    case DSLParser.GENERIC_REF:
                    case DSLParser.SINGLE_SUBJECT_REF:
                    case DSLParser.GROUP_SUBJECT_REF:
                    case DSLParser.SINGLE_OBJECT_REF:
                    case DSLParser.GROUP_OBJECT_REF:
                        {
                        this.state = 72;
                        this.ref();
                        }
                        break;
                    case DSLParser.LSQUARE:
                        {
                        this.state = 73;
                        this.list();
                        }
                        break;
                    default:
                        throw new antlr.NoViableAltException(this);
                    }
                    }
                    }
                    this.state = 80;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                }
            }

            this.state = 83;
            this.match(DSLParser.RSQUARE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public primitive(): PrimitiveContext {
        let localContext = new PrimitiveContext(this.context, this.state);
        this.enterRule(localContext, 12, DSLParser.RULE_primitive);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 85;
            _la = this.tokenStream.LA(1);
            if(!(_la === 16 || _la === 17)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ref(): RefContext {
        let localContext = new RefContext(this.context, this.state);
        this.enterRule(localContext, 14, DSLParser.RULE_ref);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 87;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 16252928) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!DSLParser.__ATN) {
            DSLParser.__ATN = new antlr.ATNDeserializer().deserialize(DSLParser._serializedATN);
        }

        return DSLParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(DSLParser.literalNames, DSLParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return DSLParser.vocabulary;
    }

    private static readonly decisionsToDFA = DSLParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class ProgramContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(DSLParser.EOF, 0)!;
    }
    public NEW_LINE(): antlr.TerminalNode[];
    public NEW_LINE(i: number): antlr.TerminalNode | null;
    public NEW_LINE(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(DSLParser.NEW_LINE);
    	} else {
    		return this.getToken(DSLParser.NEW_LINE, i);
    	}
    }
    public fact(): FactContext[];
    public fact(i: number): FactContext | null;
    public fact(i?: number): FactContext[] | FactContext | null {
        if (i === undefined) {
            return this.getRuleContexts(FactContext);
        }

        return this.getRuleContext(i, FactContext);
    }
    public aliasDeclaration(): AliasDeclarationContext[];
    public aliasDeclaration(i: number): AliasDeclarationContext | null;
    public aliasDeclaration(i?: number): AliasDeclarationContext[] | AliasDeclarationContext | null {
        if (i === undefined) {
            return this.getRuleContexts(AliasDeclarationContext);
        }

        return this.getRuleContext(i, AliasDeclarationContext);
    }
    public override get ruleIndex(): number {
        return DSLParser.RULE_program;
    }
    public override enterRule(listener: DSLListener): void {
        if(listener.enterProgram) {
             listener.enterProgram(this);
        }
    }
    public override exitRule(listener: DSLListener): void {
        if(listener.exitProgram) {
             listener.exitProgram(this);
        }
    }
    public override accept<Result>(visitor: DSLVisitor<Result>): Result | null {
        if (visitor.visitProgram) {
            return visitor.visitProgram(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class FactContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public sentence(): SentenceContext {
        return this.getRuleContext(0, SentenceContext)!;
    }
    public TERMINATOR(): antlr.TerminalNode {
        return this.getToken(DSLParser.TERMINATOR, 0)!;
    }
    public override get ruleIndex(): number {
        return DSLParser.RULE_fact;
    }
    public override enterRule(listener: DSLListener): void {
        if(listener.enterFact) {
             listener.enterFact(this);
        }
    }
    public override exitRule(listener: DSLListener): void {
        if(listener.exitFact) {
             listener.exitFact(this);
        }
    }
    public override accept<Result>(visitor: DSLVisitor<Result>): Result | null {
        if (visitor.visitFact) {
            return visitor.visitFact(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class AliasDeclarationContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public ALIAS_KW(): antlr.TerminalNode {
        return this.getToken(DSLParser.ALIAS_KW, 0)!;
    }
    public PLAIN_WORD(): antlr.TerminalNode {
        return this.getToken(DSLParser.PLAIN_WORD, 0)!;
    }
    public TERMINATOR(): antlr.TerminalNode {
        return this.getToken(DSLParser.TERMINATOR, 0)!;
    }
    public EQUALS(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.EQUALS, 0);
    }
    public PREDICATE(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.PREDICATE, 0);
    }
    public override get ruleIndex(): number {
        return DSLParser.RULE_aliasDeclaration;
    }
    public override enterRule(listener: DSLListener): void {
        if(listener.enterAliasDeclaration) {
             listener.enterAliasDeclaration(this);
        }
    }
    public override exitRule(listener: DSLListener): void {
        if(listener.exitAliasDeclaration) {
             listener.exitAliasDeclaration(this);
        }
    }
    public override accept<Result>(visitor: DSLVisitor<Result>): Result | null {
        if (visitor.visitAliasDeclaration) {
            return visitor.visitAliasDeclaration(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class SentenceContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public token(): TokenContext[];
    public token(i: number): TokenContext | null;
    public token(i?: number): TokenContext[] | TokenContext | null {
        if (i === undefined) {
            return this.getRuleContexts(TokenContext);
        }

        return this.getRuleContext(i, TokenContext);
    }
    public override get ruleIndex(): number {
        return DSLParser.RULE_sentence;
    }
    public override enterRule(listener: DSLListener): void {
        if(listener.enterSentence) {
             listener.enterSentence(this);
        }
    }
    public override exitRule(listener: DSLListener): void {
        if(listener.exitSentence) {
             listener.exitSentence(this);
        }
    }
    public override accept<Result>(visitor: DSLVisitor<Result>): Result | null {
        if (visitor.visitSentence) {
            return visitor.visitSentence(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class TokenContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public primitive(): PrimitiveContext | null {
        return this.getRuleContext(0, PrimitiveContext);
    }
    public list(): ListContext | null {
        return this.getRuleContext(0, ListContext);
    }
    public ref(): RefContext | null {
        return this.getRuleContext(0, RefContext);
    }
    public PREDICATE(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.PREDICATE, 0);
    }
    public ALIAS(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.ALIAS, 0);
    }
    public PLAIN_WORD(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.PLAIN_WORD, 0);
    }
    public COMMA(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.COMMA, 0);
    }
    public LPAREN(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.LPAREN, 0);
    }
    public RPAREN(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.RPAREN, 0);
    }
    public SEMICOLON(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.SEMICOLON, 0);
    }
    public QUESTION(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.QUESTION, 0);
    }
    public EXCLAMATION(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.EXCLAMATION, 0);
    }
    public APOSTROPHE(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.APOSTROPHE, 0);
    }
    public HASH(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.HASH, 0);
    }
    public override get ruleIndex(): number {
        return DSLParser.RULE_token;
    }
    public override enterRule(listener: DSLListener): void {
        if(listener.enterToken) {
             listener.enterToken(this);
        }
    }
    public override exitRule(listener: DSLListener): void {
        if(listener.exitToken) {
             listener.exitToken(this);
        }
    }
    public override accept<Result>(visitor: DSLVisitor<Result>): Result | null {
        if (visitor.visitToken) {
            return visitor.visitToken(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ListContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public LSQUARE(): antlr.TerminalNode {
        return this.getToken(DSLParser.LSQUARE, 0)!;
    }
    public RSQUARE(): antlr.TerminalNode {
        return this.getToken(DSLParser.RSQUARE, 0)!;
    }
    public primitive(): PrimitiveContext[];
    public primitive(i: number): PrimitiveContext | null;
    public primitive(i?: number): PrimitiveContext[] | PrimitiveContext | null {
        if (i === undefined) {
            return this.getRuleContexts(PrimitiveContext);
        }

        return this.getRuleContext(i, PrimitiveContext);
    }
    public ref(): RefContext[];
    public ref(i: number): RefContext | null;
    public ref(i?: number): RefContext[] | RefContext | null {
        if (i === undefined) {
            return this.getRuleContexts(RefContext);
        }

        return this.getRuleContext(i, RefContext);
    }
    public list(): ListContext[];
    public list(i: number): ListContext | null;
    public list(i?: number): ListContext[] | ListContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ListContext);
        }

        return this.getRuleContext(i, ListContext);
    }
    public COMMA(): antlr.TerminalNode[];
    public COMMA(i: number): antlr.TerminalNode | null;
    public COMMA(i?: number): antlr.TerminalNode | null | antlr.TerminalNode[] {
    	if (i === undefined) {
    		return this.getTokens(DSLParser.COMMA);
    	} else {
    		return this.getToken(DSLParser.COMMA, i);
    	}
    }
    public override get ruleIndex(): number {
        return DSLParser.RULE_list;
    }
    public override enterRule(listener: DSLListener): void {
        if(listener.enterList) {
             listener.enterList(this);
        }
    }
    public override exitRule(listener: DSLListener): void {
        if(listener.exitList) {
             listener.exitList(this);
        }
    }
    public override accept<Result>(visitor: DSLVisitor<Result>): Result | null {
        if (visitor.visitList) {
            return visitor.visitList(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class PrimitiveContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public NAME(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.NAME, 0);
    }
    public NUMBER(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.NUMBER, 0);
    }
    public override get ruleIndex(): number {
        return DSLParser.RULE_primitive;
    }
    public override enterRule(listener: DSLListener): void {
        if(listener.enterPrimitive) {
             listener.enterPrimitive(this);
        }
    }
    public override exitRule(listener: DSLListener): void {
        if(listener.exitPrimitive) {
             listener.exitPrimitive(this);
        }
    }
    public override accept<Result>(visitor: DSLVisitor<Result>): Result | null {
        if (visitor.visitPrimitive) {
            return visitor.visitPrimitive(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class RefContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public GENERIC_REF(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.GENERIC_REF, 0);
    }
    public SINGLE_SUBJECT_REF(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.SINGLE_SUBJECT_REF, 0);
    }
    public GROUP_SUBJECT_REF(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.GROUP_SUBJECT_REF, 0);
    }
    public SINGLE_OBJECT_REF(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.SINGLE_OBJECT_REF, 0);
    }
    public GROUP_OBJECT_REF(): antlr.TerminalNode | null {
        return this.getToken(DSLParser.GROUP_OBJECT_REF, 0);
    }
    public override get ruleIndex(): number {
        return DSLParser.RULE_ref;
    }
    public override enterRule(listener: DSLListener): void {
        if(listener.enterRef) {
             listener.enterRef(this);
        }
    }
    public override exitRule(listener: DSLListener): void {
        if(listener.exitRef) {
             listener.exitRef(this);
        }
    }
    public override accept<Result>(visitor: DSLVisitor<Result>): Result | null {
        if (visitor.visitRef) {
            return visitor.visitRef(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
